# KWS_1

./: .gitignore  README.md  pyproject.toml
kws_transformer/: __init__.py  config.py  train.py
kws_transformer/conf/: config.yaml
kws_transformer/kws/: __init__.py  data.py  model.py  model_converison.py
kws_transformer/kws/preprocessing_data/: __init__.py  preproccesing.py  utils.py
tests/: WaveformToSpectrogram.py  __init__.py  app.py  audio_input.py  onnx_tests.py
tests/for_app/: audio_input_ui.py  design.py  design_old.py
